# pico-sensor-zig

./: .gitmodules  README.md  build.zig  build.zig.zon
sensor-microzig/: build.zig
sensor-pico-sdk/: .gitignore  CMakeLists.txt  build.zig  build.zig.zon
sensor-pico-sdk/include/: config.example.h  lwipopts.h
sensor-pico-sdk/src/: main.zig  mhz19c_uart.zig
server/: .env.example  docker-compose.yml
server/telegraf/: telegraf.conf
